; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/crypt32/extr_encode.c_test_encodeFiletime.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/crypt32/extr_encode.c_test_encodeFiletime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@times = common dso_local global i32* null, align 8
@X509_CHOICE_OF_TIME = common dso_local global i32 0, align 4
@PKCS_UTC_TIME = common dso_local global i32 0, align 4
@szOID_RSA_signingTime = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @test_encodeFiletime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_encodeFiletime(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %28, %1
  %5 = load i64, i64* %3, align 8
  %6 = load i32*, i32** @times, align 8
  %7 = call i64 @ARRAY_SIZE(i32* %6)
  %8 = icmp ult i64 %5, %7
  br i1 %8, label %9, label %31

9:                                                ; preds = %4
  %10 = load i64, i64* %2, align 8
  %11 = load i32, i32* @X509_CHOICE_OF_TIME, align 4
  %12 = load i32*, i32** @times, align 8
  %13 = load i64, i64* %3, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = call i32 @testTimeEncoding(i64 %10, i32 %11, i32* %14)
  %16 = load i64, i64* %2, align 8
  %17 = load i32, i32* @PKCS_UTC_TIME, align 4
  %18 = load i32*, i32** @times, align 8
  %19 = load i64, i64* %3, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  %21 = call i32 @testTimeEncoding(i64 %16, i32 %17, i32* %20)
  %22 = load i64, i64* %2, align 8
  %23 = load i32, i32* @szOID_RSA_signingTime, align 4
  %24 = load i32*, i32** @times, align 8
  %25 = load i64, i64* %3, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = call i32 @testTimeEncoding(i64 %22, i32 %23, i32* %26)
  br label %28

28:                                               ; preds = %9
  %29 = load i64, i64* %3, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %3, align 8
  br label %4

31:                                               ; preds = %4
  ret void
}

declare dso_local i64 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @testTimeEncoding(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
